syntax = "proto3";

package user;
option go_package = "grpc-user-service/proto;proto";

import "google/api/annotations.proto";

service UserService {
    rpc GetUser (UserIdRequest) returns (UserResponse) {
        option (google.api.http) = {
            get: "/v1/user/{id}"
        };
    }
    rpc GetUsers (UserIdsRequest) returns (UsersResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc SearchUsers (SearchRequest) returns (UsersResponse) {
        option (google.api.http) = {
            get: "/v1/search"
        };
    }
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

message UserIdRequest {
    int32 id = 1;
}

message UserIdsRequest {
    repeated int32 ids = 1;
}

message SearchRequest {
    string city = 1;
    int64 phone = 2;
    bool married = 3;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}
